--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>R_rocky ❤️</title>
+  <title>R_rocky</title>
   <link rel="stylesheet" href="css/style.css">
 
 </head>
