remove js script

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/109/three.min.js'></script>
 <script src='https://raw.githack.com/mrdoob/three.js/master/examples/js/controls/OrbitControls.js'></script>
-<script src='https://codepen.io/AlainBarrios/pen/qGKxRO.js'></script>
+<!-- <script src='https://codepen.io/AlainBarrios/pen/qGKxRO.js'></script> -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js'>
 </script><script  src="js/script.js"></script>
 
